--- a/CNN Model/CNN_model.ipynb
+++ b/CNN Model/CNN_model.ipynb
@@ -10,10 +10,14 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.5"
+    },
+    "interpreter": {
+      "hash": "33dc6d49505b4536b6a128d9d7c879e1fa44477ad44947bbbe73093067fe6393"
     }
   },
   "cells": [
@@ -33,18 +37,18 @@
         "id": "ixO_6ozy5RsU"
       },
       "source": [
-        "import numpy as np \n",
-        "import pandas as pd \n",
-        "from math import sqrt\n",
-        "import matplotlib.pyplot as plt\n",
-        "from matplotlib import rcParams\n",
-        "import seaborn as sns\n",
-        "import IPython\n",
-        "import keras\n",
-        "import tensorflow as tf"
+        "print(123)"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
