--- a/CNN Model/CNN_dataAnalysis.ipynb
+++ b/CNN Model/CNN_dataAnalysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CNN_dataAnalysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxhsPwJkVt0nN30MeUej3E",
+      "authorship_tag": "ABX9TyOFBfqxrpNsduMHwPgGNwwy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Ee5IbGlJfgt"
+        "id": "8Ee5IbGlJfgt",
+        "outputId": "2cfe0978-40e3-4374-8416-9f3f84c03bd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import numpy as np \n",
@@ -40,10 +44,19 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib import rcParams\n",
         "import seaborn as sns\n",
-        "import IPython\n"
+        "import IPython\n",
+        "print(123)"
       ],
-      "execution_count": 34,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "123\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -59,7 +72,7 @@
         "\n",
         "drive.mount(\"/content/drive\", force_remount=True)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +97,7 @@
         "data = pd.read_csv(path)\n",
         "data.shape"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +126,7 @@
       "source": [
         "data"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +503,7 @@
       "source": [
         "data.columns"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +535,7 @@
       "source": [
         "data.isnull().sum()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +586,7 @@
       "source": [
         "data.info()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +649,7 @@
         "data[['trans_date','trans_time']] = data.trans_date_trans_time.str.split(expand=True)\n",
         "data.head()\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +875,7 @@
       "source": [
         "data['category'].nunique()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +903,7 @@
       "source": [
         "data['category'].value_counts()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,7 +951,7 @@
         "map={'gas_transport':0,'grocery_pos':1,'home':2,'shopping_pos':3,'kids_pets':4,'shopping_net':5,'entertainment':6,'food_dining':7,'personal_care':8,'health_fitness':9,'misc_pos':10,'misc_net':11,'grocery_net':12,'travel':13}\n",
         "data=data.applymap(lambda l: map.get(l) if l in map else l)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -955,7 +968,7 @@
         "data= data.drop([\"Unnamed: 0\", \"trans_date_trans_time\", \"merchant\", \"first\", \"last\", \"gender\", \"street\", \"city\", \"state\", \"zip\", \"job\", \"dob\", \"trans_num\"], axis=1)\n",
         "data.head()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1103,7 +1116,7 @@
       "source": [
         "data.shape"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1131,7 +1144,7 @@
       "source": [
         "data['is_fraud'].nunique()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1172,7 @@
       "source": [
         "data['is_fraud'].value_counts()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,7 +1244,7 @@
       "source": [
         "(data.is_fraud.value_counts())/(data.is_fraud.count())"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1403,7 +1416,7 @@
         "non_fraud=data[data.amt>1377]\n",
         "non_fraud"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1648,7 +1661,7 @@
       "source": [
         "non_fraud.is_fraud.nunique()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1678,7 +1691,7 @@
         "plot = data[data['is_fraud']==1].plot.scatter(x='amt', y='is_fraud', color='Orange', label='Fraud')\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1718,7 +1731,7 @@
         "plt.ylabel('Number of Transactions')\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1813,7 +1826,7 @@
         "plt.ylabel('Amount')\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2000,7 +2013,7 @@
         "sns.heatmap(corr, cmap='coolwarm', ax=ax)\n",
         "ax.set_title(\"Imbalanced Correlation Matrix\", fontsize=14)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2052,7 +2065,7 @@
         "data[\"trans_date\"] = pd.to_datetime(data[\"trans_date\"]).dt.strftime(\"%Y%m%d\")\n",
         "data.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2199,7 +2212,7 @@
         "    x = time.strptime(t,'%H:%M:%S')\n",
         "    return str(int(datetime.timedelta(hours=x.tm_hour,minutes=x.tm_min,seconds=x.tm_sec).total_seconds()))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2216,7 +2229,7 @@
         "data.trans_time=data.trans_time.apply(convertTime)\n",
         "data.head()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
